2008-07-14  Kenichi Handa  <handa@m17n.org>

	* xfont.c (xfont_open): Add workaround for X's bug.

2008-07-14  Emanuele Giaquinta  <emanuele.giaquinta@gmail.com>  (tiny change)

	* fontset.c: Include <stdio.h> unconditionally.

2008-07-13  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (Fdbus_register_signal): Allow also signal arguments
	for filtering.

2008-07-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/vms.h: Use __GNUC__ instead of _GNUC_.

	* m/macppc.h:
	* m/alpha.h: Use GNU_LINUX instead of LINUX.  Reorganize conditionals.

	* m/ibms390x.h (XINT, XUINT): Don't define, same as the default
	(SPECIAL_EMACS_INT):
	* m/ia64.h (SPECIAL_EMACS_INT):
	* m/amdx86-64.h (SPECIAL_EMACS_INT):
	* s/gnu.h (NLIST_STRUCT):
	* aix4-2.h (X11R5_INHIBIT_I18N):
	* s/gnu-linux.h (LINUX):
	* s/msdos.h (HAVE_FACES):
	* s/ms-w32.h (HAVE_FACES): Don't define, unused.

	* systty.h:
	* sysdep.c (setup_pty): Don't depend on SYSV_PTYS, it is not used
	anymore.

2008-07-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* syswait.h: Remove old if 0 code.  Do not define WAITTYPE, it was
	always defined as int.

	* s/netbsd.h (HAVE_UNION_WAIT, HAVE_WAIT_HEADER, WAIT_USE_INT):
	* s/gnu.h (HAVE_WAIT_HEADER, WAIT_USE_INT, HAVE_UNION_WAIT):
	* s/gnu-linux.h (HAVE_WAIT_HEADER):
	* s/freebsd.h (HAVE_WAIT_HEADER):
	* s/bsd-common.h (HAVE_UNION_WAIT):
	* s/aix4-2.h (HAVE_WAIT_HEADER):
	* m/mips.h (HAVE_UNION_WAIT):
	* s/usg5-4.h (HAVE_WAIT_HEADER, WAITTYPE): Do not define, not used.
	(COFF, static): Do not define, they are undefined later in the file.

	* process.c (update_status): Don't use a union.
	(status_convert):
	(sigchld_handler): Use int instead of WAITTYPE.

2008-07-12  Chong Yidong  <cyd@stupidchicken.com>

	* indent.c (Fvertical_motion): Restore hscroll before moving to
	goal column.

2008-07-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* lisp.h: Remove left over code.

2008-07-11  Andreas Schwab  <schwab@suse.de>

	* lisp.h: Fix logic in last change.

	* menu.h: New file.